<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="keep_session_in_background"
        android:summary="@string/keep_background_session_summary"
        android:title="@string/keep_background_session_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="keep_session_in_background"
        android:key="resume_background_playback"
        android:summary="@string/resume_background_playback_summary"
        android:title="@string/resume_background_playback_title" />

    <ListPreference
        android:defaultValue="300"
        android:dependency="keep_session_in_background"
        android:dialogTitle="@string/background_session_timeout_dialog_title"
        android:entries="@array/entries_background_session_timeout"
        android:entryValues="@array/entryvalues_background_session_timeout"
        android:key="background_session_timeout_seconds"
        android:summary="@string/background_session_timeout_summary"
        android:title="@string/background_session_timeout_title" />

</PreferenceScreen>
